2008-12-29  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil/GenericInstanceMethod.cs,
	* Mono.Cecil/GenericInstanceType.cs,
	* Mono.Cecil/IGenericInstance.cs: Introduce HasGenericArguments into
	the interface and implement it inside GenericInstance[Method|Type]

2008-12-16  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Signatures/SignatureReader.cs: fix reading of wrong
	modifiers.

2008-12-01  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil.Signatures/CustomAttrib.cs: Define reusable Empty
	arrays for both FixedArg and NamedArg.
	* Mono.Cecil.Signatures/SignatureReader.cs: Avoid creating empty
	ParameterDefinitionCollection on constructors. Use the new Empty
	arrays when possible.

2008-12-01  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil/MethodReference.cs: Make HasParameters virtual
	* Mono.Cecil/MethodSpecification.cs: Override HasParameters to make
	sure we're tracking the same object as the Parameters property does.
	* Mono.Cecil/PropertyDefinition.cs: Implement HasParameters based on
	the GetMethod, SetMethod or its own parameter collection.
	* Mono.Cecil/PropertyReference.cs: Add abstract HasParameters property

2008-11-27  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ExternTypeCollection.cs: don't attach types as they
	are already attached to the current module.

2008-11-22  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil/GenericParameter.cs,
	* Mono.Cecil/ICustomAttributeProvider.cs,
	* Mono.Cecil/CallSite.cs,
	* Mono.Cecil/IMethodSignature.cs,
	* Mono.Cecil/FunctionPointerType.cs,
	* Mono.Cecil/FieldDefinition.cs,
	* Mono.Cecil/TypeReference.cs,
	* Mono.Cecil/GenericInstanceMethod.cs,
	* Mono.Cecil/IHasSecurity.cs,
	* Mono.Cecil/MethodReturnType.cs,
	* Mono.Cecil/AssemblyDefinition.cs,
	* Mono.Cecil/TypeDefinition.cs,
	* Mono.Cecil/MethodDefinition.cs,
	* Mono.Cecil/EventDefinition.cs,
	* Mono.Cecil/ModuleDefinition.cs,
	* Mono.Cecil/MethodReference.cs,
	* Mono.Cecil/ReflectionWriter.cs,